[INFER] Restore known type of tracked vars at access points, not join points, bug 657304.